--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -182,6 +182,9 @@
     |
     <a href="https://icc2024.ieee-icc.org/" target="_blank">ICC</a>
     |
+<!-- AI - A -->
+    <a href="https://ijcai24.org/" target="_blank">IJCAI</a>
+    |
 <!-- IR - A-->
     <a href="https://sigir-2024.github.io/index.html" target="_blank">SIGIR</a>
     |
@@ -231,19 +234,19 @@
 <!-- software engineering - B-->
     <a href="https://www.dasfaa2024.org/" target="_blank">DASFAA</a>
     |
-    <a href="" target="_blank">ETAPS</a>
+    <a href="https://www.etaps.org/2024/" target="_blank">ETAPS</a>
     |
     <a href="https://conf.researchr.org/home/saner-2024" target="_blank">SANER</a>
     |
-    <a href="" target="_blank">ESEM</a>
+    <a href="https://conf.researchr.org/home/esem-2024" target="_blank">ESEM</a>
     |
-    <a href="" target="_blank">ISSRE</a>
+    <a href="https://issre.github.io/2024/" target="_blank">ISSRE</a>
     |
-    <a href="" target="_blank">ICSME</a>
+    <a href="https://conf.researchr.org/home/icsme-2024" target="_blank">ICSME</a>
     |  
-    <a href="" target="_blank">ICPC</a>
+    <a href="https://conf.researchr.org/home/icpc-2024" target="_blank">ICPC</a>
     |
-    <a href="#" target="_blank">RE</a>
+    <a href="https://conf.researchr.org/home/RE-2024" target="_blank">RE</a>
     |
     <a href="https://cyprusconferences.org/caise2024/" target="_blank">CAiSE</a>
     |
@@ -261,7 +264,7 @@
     |
     <a href="" target="_blank">SETTA</a>
     |
-    <a href="" target="_blank">EASE</a>
+    <a href="https://conf.researchr.org/home/ease-2024" target="_blank">EASE</a>
     |
     <a href="" target="_blank">Internetware</a>
     |
@@ -2180,11 +2183,69 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/krsX4BA0J7pGLu9O5-wkiw" target="_blank">视觉分词器统一图文信息，快手提出基座模型 LaVIT 刷榜多模态任务</a>
     |
     <!-- 11.14 --> 
-    <a href="https://mp.weixin.qq.com/s/OXtKETaS7YijQxVhsKdOaA" target="_blank">xx</a>
-    |  
+    <a href="https://mp.weixin.qq.com/s/aMMqWVTYoNAeX1sVhd98uw" target="_blank">刚刚！奥特曼终于透露了GPT-5的最新消息！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/miv0ThB8xxzxeOUg85KN1A" target="_blank">史上最强AI芯片！英伟达H200震撼来袭！141 GB 超大显存，Llama2推理性能翻倍，老黄赢麻了！</a>
+    |   
     <!-- 11.15 --> 
-    <a href="https://mp.weixin.qq.com/s/OXtKETaS7YijQxVhsKdOaA" target="_blank">xx</a>
+    <a href="https://mp.weixin.qq.com/s/AGjQVwKEvHHos6ycIy9RFw" target="_blank">突发！奥特曼宣布暂停ChatGPT Plus新用户注册！</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/9RSYoY2HIcCD8WaP3yR4Sw" target="_blank">太可怕啦！我在网上发了个贴，就被GPT-4推断出了个人隐私！GPT-4化身福尔摩斯</a>
+    | 
+    <!-- 11.16 --> 
+    <a href="https://mp.weixin.qq.com/s/2EyiIaAPw3Ok7yPUFTA7YQ" target="_blank">ChatGPT被爆重大漏洞！3.5用户可以免费白嫖4.0 Plus！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Y4WRgu4j0TidKZLeacWIfQ" target="_blank">微软深夜炸弹！自研AI芯片！更名Bing Chat和ChatGPT竞争，和英伟达开展AI代工合作</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-NApD36snTP2tCtDj5HeLA" target="_blank">实时文生图速度提升5-10倍，清华LCM/LCM-LoRA爆火，浏览超百万、下载超20万</a>
+    |  
+    <!-- 11.17 --> 
+    <a href="https://mp.weixin.qq.com/s/MYQaMJP_XdM258qFubj0Wg" target="_blank">  恕我直言，大模型对齐可能无法解决安全问题，我们都被表象误导了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Vr4CP3-0qPh-MLsCD3LOTw" target="_blank">  马斯克正式「切脑」，Neuralink内部实验室照片曝光！7年计划22000例手术，全力研发只为对抗超级AI</a>
+    | 
+    <!-- 11.18 --> 
+    <a href="https://mp.weixin.qq.com/s/qkuJpbhlWhLz2YLLqpGarQ" target="_blank">突发！“ChatGPT 之父”奥特曼被 OpenAI 开除！！乔布斯故事重演了？</a>
+    |  
+    <!-- 11.19 --> 
+    <a href="https://mp.weixin.qq.com/s/skAMdbgtLUyvb4Pg-1BdSQ" target="_blank">340条样本就能让GPT-4崩溃，输出有害内容高达95%？OpenAI的安全防护措施再次失效</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/qiruebzwJioYP6S0qLUYKA" target="_blank">大反转！OpenAI董事会辞职，求奥特曼重返OpenAI？「奥特曼24小时流放」大揭秘...</a>
+    |
+    <!-- 11.20 --> 
+    <a href="https://mp.weixin.qq.com/s/lguH8sC-_jmCFKoEbGEKmQ" target="_blank">MBZUAI校长邢波亲笔撰文：人工智能的「文艺复兴」已经到来</a>
+    |  
+    <!-- 11.21 --> 
+    <a href="https://mp.weixin.qq.com/s/G9Z2DTWkDr_DsftTsb_gnw" target="_blank">古汉语AI大模型，来了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8Dn3VwDOerQoas6fhTnqjA" target="_blank">GPT-4分不清“很快”是多快，“万金油”CoT也拯救不了</a>
+    |
+    <!-- 11.22 -->   
+    <a href="https://mp.weixin.qq.com/s/JxBbjgi1sBQsFIzd8a6X1Q" target="_blank">大模型变身双面人：虚假新闻制造机VS假新闻鉴别大师！</a>
+    |    
+    <!-- 11.23 --> 
+    <a href="https://mp.weixin.qq.com/s/kqSRCGjIr_AAocFBjNx2ig" target="_blank">新王加冕，GPT-4V 屠榜视觉问答</a>
+    |
+    <!-- 11.24 --> 
+    <a href="https://mp.weixin.qq.com/s/z86dRlm7A6c1O5M-MRRiQA" target="_blank">疑似威胁人类？OpenAI神秘Q*项目更多信息曝光，马斯克、Lecun下场争论…</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eVIj4yKZTuYtCjsR3AZrSw" target="_blank">哈佛、斯坦福等最新研究，转发行为可判断一个人是否易受谣言影响</a>
+    |
+    <!-- 11.25 --> 
+    <a href="https://mp.weixin.qq.com/s/1FynuZw9YNxS0DVLpzOEKg" target="_blank">清华提出 SoRA，参数量只有 LoRA 的 70%，表现更好！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/L-npJQ_RtzpH9KrlT0_5Vw" target="_blank">ChatGPT化身“AI间谍”：你在网上说的每句话都将被监控</a>
+    |    
+    <!-- 11.26 --> 
+    <a href="https://mp.weixin.qq.com/s/bJYqfHF4RrYS8GkXfOMYGA" target="_blank">从 CoT 到 Agent，最全综述来了！上交出品</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6DRgCbVDYjDQIvd_D_uXIw" target="_blank">大连理工发布“太一”：基于多任务指令微调的中英双语生物医学大模型</a>
+    | 
+    <!-- 11.27 --> 
+    <a href="https://mp.weixin.qq.com/s/ueRbq_Ace7UCih1Od7qaDA" target="_blank">田渊栋给OpenAI神秘Q*项目泼冷水：合成数据不是AGI救星，能力仅限简单数学题</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/L-AXDjTNB07fy23saiOYGQ" target="_blank">大模型没有自我改进能力？苏黎世理工联合Meta AI提出小模型架构，显著提升大模型表现</a>
+    |       
 </br>
 </br>
 AI论文: 
@@ -3933,6 +3994,13 @@ Dependency Analytics Field：
     |
   <br />
   <br />
+Neural Language Field：
+<br />
+<!-- Chongqing University -->
+    <a href="http://www.cfl.cqu.edu.cn/info/1295/11289.htm" target="_blank">Hongwen Cao</a>
+    |
+  <br />
+  <br />
 Language Model Field：
 <br />
 <!-- HKUST -->
@@ -4115,6 +4183,9 @@ Geographic Information Systems Field：
     |
 <!-- University of Minnesota (UMN) -->
     <a href="https://zekun-li.github.io/#projects" target="_blank">Zekun Li</a>
+    |
+    <!-- Hunan normal university -->
+    <a href="https://dlkx.hunnu.edu.cn/info/1740/5237.htm" target="_blank">Yiliang Wan</a>
     |
   <br />
   <br />
