--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -199,6 +199,9 @@
     |
     <a href="" target="_blank">VLDB</a>
     |
+<!-- Multimedia - A-->
+    <a href="https://2024.acmmm.org/" target="_blank">ACM Multimedia</a>
+    |
 <!-- software engineering - A-->
    <a href="https://conf.researchr.org/track/icse-2024/icse-2024-research-track" target="_blank">ICSE</a>
     |
@@ -250,6 +253,16 @@
     |
     <a href="https://cyprusconferences.org/caise2024/" target="_blank">CAiSE</a>
     |
+<!-- bigdata - C-->  
+    <a href="https://bigdataieee.org/BigData2024/index.html" target="_blank">IEEE BigData</a>
+    |
+    <a href="https://ieeebigdataservice.com/" target="_blank">IEEE BigDataService</a>
+    |
+<!-- data mining - C-->  
+    <a href="https://adma2024.github.io/" target="_blank">ADMA</a>
+    |
+    <a href="http://101.132.40.85/index.html" target="_blank">APWeb-WAIM</a>
+    |
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
     |
@@ -291,6 +304,26 @@
     <a href="" target="_blank">CCIR</a>
     |
     <a href="" target="_blank">ICWSM</a>
+    |
+<!-- Multimedia Learning -->
+    <a href="" target="_blank">MM Asia</a>
+    |
+    <a href="" target="_blank">ChinaMM</a>
+    |
+<!-- software engineering - others -->
+    <a href="" target="_blank">SSE</a>
+    |
+    <a href="" target="_blank">ChinaMM</a>
+    |
+    <a href="" target="_blank">ChinaSoft</a>
+    |
+    <a href="" target="_blank">ChinaService</a>
+    |
+    <a href="" target="_blank">ChineseCSCW</a>
+    |
+    <a href="" target="_blank">AKBC</a>
+    |
+    <a href="" target="_blank">IJCKG</a>
     |  
     <br/>
     <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
@@ -2245,7 +2278,34 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/ueRbq_Ace7UCih1Od7qaDA" target="_blank">田渊栋给OpenAI神秘Q*项目泼冷水：合成数据不是AGI救星，能力仅限简单数学题</a>
     | 
     <a href="https://mp.weixin.qq.com/s/L-AXDjTNB07fy23saiOYGQ" target="_blank">大模型没有自我改进能力？苏黎世理工联合Meta AI提出小模型架构，显著提升大模型表现</a>
-    |       
+    |
+    <!-- 11.28 --> 
+    <a href="https://mp.weixin.qq.com/s/9uyNSSNm9_mgEyAKLD67jw" target="_blank">又一千亿级大模型问世，全面开源！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/IWtDvfqQury7Hd0K7_qGmg" target="_blank">大语言模型成为了「调包侠」？耶鲁提出代码生成新基准：ML-Bench</a>
+    |
+    <!-- 11.30 --> 
+    <a href="https://mp.weixin.qq.com/s/M5uV9cr73vEz7P2fuB62Nw" target="_blank">ChatGPT一周年，奥特曼官宣 OpenAI 新动作!</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/9f3TA4Ub2uiHYSrHtiwALw" target="_blank">ChatGPT成为“帮凶”：生成虚假数据集支持未知科学假设</a>
+    | 
+    <!-- 12.01 --> 
+    <a href="https://mp.weixin.qq.com/s/ljUkRs-EAG_Xh0qHIoxJSw" target="_blank">ChatGPT 问世一周年之际，开源大模型能否迎头赶上？</a>
+    |
+    <!-- 12.02 --> 
+    <a href="https://mp.weixin.qq.com/s/-3pse0mseHXt2aZ3CkEamg" target="_blank">追踪溯源？可定位源头模型的AI文本判别器出现了！CMU提出</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-jzzFJO8e7AEnZZS1ttrZQ" target="_blank">ChatGPT将有重大更新，GPTs商店推迟发布，Greg和Ilya晒合照...</a>
+    | 
+    <!-- 12.03 --> 
+    <a href="https://mp.weixin.qq.com/s/M9JBXKWtkTGslDsyQvdxXw" target="_blank">谷歌DeepMind重金打造、号称碾压ChatGPT的模型今年要“无了”,背后原因令人嘘唏…</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/jPgZH0LEID5mWxyxKRsIHQ" target="_blank">大模型角色扮演也有偏好？男性角色效果优于女性角色？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/mt9W8Mf0LbZjbuRObyeWeQ" target="_blank">OpenAI科学家Andrej Karpathy力荐，23年必读的大语言模型论文清单</a>
+    | 
+
+
 </br>
 </br>
 AI论文: 
@@ -4067,6 +4127,12 @@ Language + Vision Field:
     |     
   <br />
   <br />
+Information Theoretic Field:
+<br />
+    <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/tenghui-huang.html" target="_blank">Teng-Hui Huang</a>
+    |   
+  <br />
+  <br /> 
 Human-computer Interaction Field：
 <br />
     <a href="https://pi.cs.tsinghua.edu.cn/people/#faculty" target="_blank">Yuanchun Shi</a>
