--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -174,7 +174,166 @@
     border-left: 5px solid #0084f2;">Accepted Top-tier Papers</h3>
 
 <br />
+<h4>2026</h4>
+<br/>
 
+<h4>2025</h4>
+<!-- network - A -->
+    <a href="" target="_blank">IEEE INFOCOM</a>
+    |
+    <a href="" target="_blank">ICC</a>
+    |
+<!-- AI - A -->
+    <a href="" target="_blank">IJCAI</a>
+    |
+<!-- IR - A-->
+    <a href="" target="_blank">SIGIR</a>
+    |
+<!-- Knowledge engineering - A-->
+    <a href="" target="_blank">ACL</a>
+    |
+    <a href="" target="_blank">ICDCS</a>
+    |
+    <a href="" target="_blank">ICDE</a>
+    |
+    <a href="" target="_blank">ACM SIGMOD</a>
+    |
+    <a href="" target="_blank">VLDB</a>
+    |
+<!-- Multimedia - A-->
+    <a href="" target="_blank">ACM Multimedia</a>
+    |
+<!-- software engineering - A-->
+   <a href="" target="_blank">ICSE</a>
+    |
+<!-- visualization - A-->
+    <a href="" target="_blank">CHI</a>
+    |
+<!-- network - B -->
+    <a href="" target="_blank">ICDCS</a>
+    | 
+<!-- semantic web - B-->
+    <a href="" target="_blank">EMNLP</a>
+    |
+    <a href="" target="_blank">NAACL</a>
+    |   
+    <a href="" target="_blank">ISWC</a>
+    |
+    <a href="" target="_blank">LREC-COLING</a>
+    |
+    <a href="" target="_blank">ECML-PKDD</a>
+    |
+    <a href="" target="_blank">ICME</a>
+    |
+    <a href="" target="_blank">ICMR</a>
+    |
+    <a href="" target="_blank">IJCNN</a>
+    |
+    <a href="" target="_blank">PAKDD</a>
+    |
+    <a href="" target="_blank">ECIR</a>
+    |
+    <a href="" target="_blank">UIC</a>
+    |
+<!-- Service Computing - B-->
+    <a href="" target="_blank">ICWS</a>
+    |
+    <a href="" target="_blank">ICSOC</a>
+    |
+<!-- software engineering - B-->
+    <a href="" target="_blank">DASFAA</a>
+    |
+    <a href="" target="_blank">ETAPS</a>
+    |
+    <a href="" target="_blank">SANER</a>
+    |
+    <a href="" target="_blank">ESEM</a>
+    |
+    <a href="" target="_blank">ISSRE</a>
+    |
+    <a href="" target="_blank">ICSME</a>
+    |  
+    <a href="" target="_blank">ICPC</a>
+    |
+    <a href="" target="_blank">RE</a>
+    |
+    <a href="" target="_blank">CAiSE</a>
+    |
+<!-- bigdata - C-->  
+    <a href="" target="_blank">IEEE BigData</a>
+    |
+    <a href="" target="_blank">IEEE BigDataService</a>
+    |
+<!-- data mining - C-->  
+    <a href="" target="_blank">ADMA</a>
+    |
+    <a href="" target="_blank">APWeb-WAIM</a>
+    |
+<!-- Neural network - C--> 
+    <a href="" target="_blank">ICONIP</a>
+    |
+    <a href="" target="_blank">KSEM</a>
+    |
+    <a href="" target="_blank">ESWC</a>
+    |
+    <a href="" target="_blank">PRICAI</a>
+    |
+<!-- software engineering - C-->
+    <a href="" target="_blank">SEKE</a>
+    |
+    <a href="" target="_blank">SETTA</a>
+    |
+    <a href="" target="_blank">EASE</a>
+    |
+    <a href="" target="_blank">Internetware</a>
+    |
+    <a href="" target="_blank">QRS</a>
+    |     
+    <a href="" target="_blank">APSEC</a>
+    |
+    <a href="" target="_blank">MSR</a>
+    |
+    <a href="" target="_blank">REFSQ</a>
+    |
+    <a href="" target="_blank">ICWE</a>
+    |
+<!-- information system - C-->
+    <a href="" target="_blank">WISE</a>
+    |
+<!-- Computational Linguistics -->
+    <a href="" target="_blank">AACL</a>
+    |
+    <a href="" target="_blank">CCL</a>
+    |
+    <a href="" target="_blank">CCKS</a>
+    |
+    <a href="" target="_blank">CCIR</a>
+    |
+    <a href="" target="_blank">ICWSM</a>
+    |
+<!-- Multimedia Learning -->
+    <a href="" target="_blank">MM Asia</a>
+    |
+    <a href="" target="_blank">ChinaMM</a>
+    |
+<!-- software engineering - others -->
+    <a href="" target="_blank">SSE</a>
+    |
+    <a href="" target="_blank">ChinaMM</a>
+    |
+    <a href="" target="_blank">ChinaSoft</a>
+    |
+    <a href="" target="_blank">ChinaService</a>
+    |
+    <a href="" target="_blank">ChineseCSCW</a>
+    |
+    <a href="" target="_blank">AKBC</a>
+    |
+    <a href="" target="_blank">IJCKG</a>
+    |  
+    <br/>
+<!--     <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
+    | -->
 
 <h4>2024</h4>
 <!-- network - A -->
@@ -207,6 +366,9 @@
     |
 <!-- visualization - A-->
     <a href="https://chi2024.acm.org/" target="_blank">CHI</a>
+    |
+<!-- network - B -->
+    <a href="https://icdcs2024.icdcs.org/" target="_blank">ICDCS</a>
     | 
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
@@ -233,6 +395,8 @@
     |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
+    |
+    <a href="" target="_blank">ICSOC</a>
     |
 <!-- software engineering - B-->
     <a href="https://www.dasfaa2024.org/" target="_blank">DASFAA</a>
@@ -394,6 +558,8 @@
     | -->
 <!-- Service Computing - B-->
     <a href="https://conferences.computer.org/icws/2023/" target="_blank">ICWS</a>
+    |
+    <a href="https://icsoc2023.diag.uniroma1.it/" target="_blank">ICSOC</a>
     |
     <a href="https://iwqos2023.ieee-iwqos.org/" target="_blank">IWQoS</a>
     |
