--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -312,14 +312,12 @@
     <a href="" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
-    <a href="" target="_blank">MM Asia</a>
+    <a href="" target="_blank">ACM Multimedia Asia</a>
     |
     <a href="" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
     <a href="" target="_blank">SSE</a>
-    |
-    <a href="" target="_blank">ChinaMM</a>
     |
     <a href="" target="_blank">ChinaSoft</a>
     |
@@ -470,14 +468,12 @@
     <a href="" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
-    <a href="" target="_blank">MM Asia</a>
+    <a href="https://2024.acmmm.org/" target="_blank">ACM Multimedia Asia</a>
     |
     <a href="" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
     <a href="" target="_blank">SSE</a>
-    |
-    <a href="" target="_blank">ChinaMM</a>
     |
     <a href="" target="_blank">ChinaSoft</a>
     |
@@ -651,9 +647,9 @@
     <a href="https://ickg2023.zhonghuapu.com/" target="_blank">ICKG</a>
     |
 <!-- Multimedia Learning -->
-    <a href="http://mmasia2023.org/" target="_blank">MM Asia</a>
+    <a href="http://mmasia2023.org/" target="_blank">ACM Multimedia Asia</a>
     |
-    <a href="http://mmasia2023.org/index.html" target="_blank">ChinaMM</a>
+    <a href="http://mmasia2023.org/index.html" target="_blank">ACM Multimedia Asia</a>
     |
 <!-- software engineering - others -->
     <a href="https://conferences.computer.org/sse/2023/cfp/" target="_blank">SSE</a>
