--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Check out Sheng's up-to-date CV for more details.
 <h3>Recent News</h3>
 <ul>
     <li style="text-align:justify">
-      [2023/02/28]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="#" target="_blank">special issue (opens the new window)</a> on When Mathematical Learning Meets Knowledge Computation: In Pursuit of Advanced Computational Theories, Paradigms, and Methods in the Mathematics Journal. Welcome your submission.</font>
+      [2023/12/11]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/6947Z4BF8Z" target="_blank">special issue (opens the new window)</a> on Information-Theoretic Guided Methods for Information Network Mining and Its Applications in the Entropy Journal. Welcome your submission.</font>
     </li>
     <li style="text-align:justify">
       [2023/02/15]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/applsci/special_issues/R9I1DGV3A2" target="_blank">special issue (opens the new window)</a> on New Advances for Open-Domain Information Mining in Theories and Applications in the Applied Sciences-Basel Journal. Welcome your submission.</font>
