--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -340,6 +340,9 @@
 <!-- AI - A -->
     <a href="https://ijcai24.org/" target="_blank">IJCAI</a>
     |
+<!-- DB - A -->
+    <a href="https://www.vldb.org/2024/" target="_blank">VLDB</a>
+    |
 <!-- IR - A-->
     <a href="https://sigir-2024.github.io/index.html" target="_blank">SIGIR</a>
     |
@@ -424,7 +427,7 @@
     <a href="http://101.132.40.85/index.html" target="_blank">APWeb-WAIM</a>
     |
 <!-- Neural network - C--> 
-    <a href="" target="_blank">ICONIP</a>
+    <a href="https://iconip2024.org/interim-committee/" target="_blank">ICONIP</a>
     |
     <a href="https://www.ai-edge.net/" target="_blank">KSEM</a>
     |
@@ -707,6 +710,8 @@
     <a href="https://mp.weixin.qq.com/s/mPkYZwdz1UJAC6DIAqk6Ug" target="_blank">KDD 2023奖项出炉：港中文、港科大等获最佳论文奖，GNN大牛Leskovec获创新奖</a>
     |
     <a href="https://mp.weixin.qq.com/s/YF8R6SOjkRK9A0_7VLZp-A" target="_blank">论文导读 | ACL-2023 事件检测</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/A6qI3YzGccoNeNBNhpQtcQ" target="_blank">夸张！EMNLP投稿近5000篇，奖项出炉：北大、腾讯摘最佳长论文</a>
     |    
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
@@ -2460,7 +2465,45 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/mt9W8Mf0LbZjbuRObyeWeQ" target="_blank">OpenAI科学家Andrej Karpathy力荐，23年必读的大语言模型论文清单</a>
     | 
-
+    <!-- 12.04 --> 
+    <a href="https://mp.weixin.qq.com/s/hbUfAy1DCmaxe-fm5dWXWw" target="_blank">揭秘DeepMind、OpenAI成立内幕，马斯克、奥特曼、佩奇、哈萨比斯的爱恨情仇......</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/tbSusw3mdMgIlVWCfZM3Ew" target="_blank">微软发布Orca2，“调教式”教会小规模大语言模型如何推理！</a>
+    | 
+    <!-- 12.05 --> 
+    <a href="https://mp.weixin.qq.com/s/j9lqDukBhIPjuFUdezblnQ" target="_blank">OpenAI 高管首次透露：ChatGPT的发布得益于奥特曼的“尝试一下”...</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/R-dfxfaTpaAw9J-vrAv-Ng" target="_blank">AI角色扮演再进化，清华提出CharacterGLM，支持AI角色高度定制化</a>
+    | 
+    <!-- 12.06 --> 
+    <a href="https://mp.weixin.qq.com/s/PNUQlLx3_W7Tj8bG1AsONA" target="_blank">Meta和IBM成立「AI联盟」！50家知名机构加入，网友：AI版复仇者联盟？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/VKRyFm0JlzL23GmusynAOQ" target="_blank">爆料！马斯克旗下AI公司xAI正计划融资10亿美元...</a>
+    | 
+    <!-- 12.07 --> 
+    <a href="https://app.gmdaily.cn/as/opened/n/20b439f2c8634d408e1ac1db85481139" target="_blank">古籍智能化工具“荀子古籍大语言模型”在京发布</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/q8IEFgNwPxrqTd1V4UGRVw" target="_blank">谷歌大杀器终于来了，最大规模Gemini震撼发布：真超GPT4，三大版本，手机直接可用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/MIpSumf3QjnJrK-WL1W8PQ" target="_blank">超越GPT-4！谷歌DeepMind重磅发布Gemini，史上最强最通用大模型！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/q8IEFgNwPxrqTd1V4UGRVw" target="_blank">谷歌大杀器终于来了，最大规模Gemini震撼发布：真超GPT4，三大版本，手机直接可用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/WDT90cUAQ1s0XUrkfzj-IA" target="_blank">违背直觉！打乱字母顺序，GPT-4竟能完美复原......</a>
+    | 
+    <!-- 12.08 --> 
+    <a href="https://mp.weixin.qq.com/s/g85oY8At4dTHWCN8Nw3nmw" target="_blank">继奶奶漏洞后又一个离奇指令！“给你20美元”，立马提升ChatGPT效果</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XQqeOUW_080lkLSlJlHQ3A" target="_blank">一文详解大模型归因机制，幻觉问题有救了！</a>
+    | 
+    <!-- 12.09 --> 
+    <a href="https://mp.weixin.qq.com/s/wYcmuv8b9mXyN7Pq7dkWhA" target="_blank">谷歌承认Gemini视频是“剪出来”的，想赶超GPT-4想疯了</a>
+    |
+    <!-- 12.10 --> 
+    <a href="https://mp.weixin.qq.com/s/FEHHpOpTv5jrH5bnKFN8Qg" target="_blank">ChatGPT “变懒”证据确凿，疑似GPT-4.5 将于本月内发布！</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/sdeqfsSyEUR0eILLnpRE_Q?poc_token=HEOKdWWjS7LSdI8kcjd_kL-AH1u96Q94Py5tCCcZ" target="_blank">马斯克摊上事了！Grok AI被爆疑似抄袭ChatGPT？？</a>
+    |  
 
 </br>
 </br>
