--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -343,19 +343,16 @@
 <!-- DB - A -->
     <a href="https://www.vldb.org/2024/" target="_blank">VLDB</a>
     |
-<!-- IR - A-->
-    <a href="https://sigir-2024.github.io/index.html" target="_blank">SIGIR</a>
-    |
-<!-- Knowledge engineering - A-->
-    <a href="" target="_blank">ACL</a>
-    |
-    <a href="" target="_blank">ICDCS</a>
-    |
-    <a href="https://icde2024.github.io/index.html" target="_blank">ICDE</a>
-    |
     <a href="" target="_blank">ACM SIGMOD</a>
     |
-    <a href="" target="_blank">VLDB</a>
+<!-- DM - A -->
+    <a href="https://icde2024.github.io/index.html" target="_blank">ICDE</a>
+    |
+<!-- NLP && Knowledge engineering - A-->
+    <a href="" target="_blank">ACL</a>
+    |
+<!-- IR - A-->
+    <a href="https://sigir-2024.github.io/index.html" target="_blank">SIGIR</a>
     |
 <!-- Multimedia - A-->
     <a href="https://2024.acmmm.org/" target="_blank">ACM Multimedia</a>
