--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -480,7 +480,10 @@
     <a href="" target="_blank">AKBC</a>
     |
     <a href="" target="_blank">IJCKG</a>
-    |  
+    | 
+<!-- geographic information --> 
+    <a href="https://ccf.org.cn/13veXIf/brief_2040" target="_blank">第五届空间数据智能学术会议SpatialDI 2024</a>
+    | 
     <br/>
     <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
     |
@@ -692,6 +695,9 @@
     <a href="https://www.prcv2023.cn/2023prcv/" target="_blank">PRCV</a>
     |
     <a href="https://mobile.ccf.org.cn/web/html7/index.html?globalId=m1096157383488573440168138588584&type=1" target="_blank">CBC</a>
+    |
+<!-- agriculture information -->   
+    <a href="https://ccf.org.cn/13veXIf/brief_2040" target="_blank">2023CCF数字农业分会年会暨第一届CCF数字农业大会</a>
     |
     <br/>
     <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
