--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -716,6 +716,8 @@
     | 
     <a href="https://mp.weixin.qq.com/s/A6qI3YzGccoNeNBNhpQtcQ" target="_blank">夸张！EMNLP投稿近5000篇，奖项出炉：北大、腾讯摘最佳长论文</a>
     |    
+    <a href="https://mp.weixin.qq.com/s/NQ2eLJ47Oni85O7m1oGWtA" target="_blank">EMNLP 2023 Best Paper公布啦！</a>
+    |
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
     <a href="https://mp.weixin.qq.com/s/1pLXpTSkJIEAel1348LjJw" target="_blank">快讯｜北邮GAMMA LAB的三篇工作被CIKM 2023 接收</a>
@@ -2507,6 +2509,13 @@ ChatGPT:
     |  
     <a href="https://mp.weixin.qq.com/s/sdeqfsSyEUR0eILLnpRE_Q?poc_token=HEOKdWWjS7LSdI8kcjd_kL-AH1u96Q94Py5tCCcZ" target="_blank">马斯克摊上事了！Grok AI被爆疑似抄袭ChatGPT？？</a>
     |  
+    <!-- 12.11 --> 
+    <a href="https://mp.weixin.qq.com/s/X23X93LoY6AJZUAG2wJwBw" target="_blank">一份来自政治学研究者的大模型“实用指南”</a>
+    |  
+    <!-- 12.12 --> 
+    <a href="https://mp.weixin.qq.com/s/dahc-OgUTXpYocjHSDADww" target="_blank">最新开源模型Mixtral震爆AI社区！超越LLama2和GPT-3.5，来自欧洲初创公司</a>
+    | 
+
 
 </br>
 </br>
@@ -4301,6 +4310,9 @@ KG in the Agriculture Field：
 <br />
 <!-- 华中农业大学 -->
     <a href="http://coi.hzau.edu.cn/info/1122/6168.htm" target="_blank">Zaiwen Feng</a>
+    |
+<!-- 中国农业科学院深圳农业基因组研究所 -->
+    <a href="https://www.jialab.org.cn/Cindex.html" target="_blank">Zaiwen Gengjie (Jay) Jia</a>
     |
   <br />
   <br />
