--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -141,6 +141,9 @@
     <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-981-16-6054-2.pdf">Graph Neural Networks: Foundations, Frontiers, and Applications [<a href="https://mp.weixin.qq.com/s/DcI7R3zTHCtHwVbcLVWWcg" target="_blank">Report</a>]</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://mp.weixin.qq.com/s/8TjqFjmu_dncuOeLgBOUpw">《可信图神经网络》</a></font></strong></li>
+
+    
     <li><strong><font color="#874e26"><a href="https://mitpress.mit.edu/books/introduction-lifted-probabilistic-inference">An Introduction to Lifted Probabilistic Inference</a></font></strong></li>
 
 
@@ -150,16 +153,16 @@
     <li><strong><font color="#874e26"><a href="https://pan.baidu.com/s/1ljKPX1daK2pFfA-aDCggGQ?pwd=p8gy">Text Mining with Machine Learning [<a href="https://mp.weixin.qq.com/s/Fa1XTrGtbpJY295Np36b2Q" target="_blank">Report</a>]</a></font></strong></li>
 
 
-    <li><strong><font color="#874e26"><a href="#">知识图谱: 概念与技术</a><a href="https://mp.weixin.qq.com/s/eiHhq8B0cc5XDirD9pszyA" target="_blank">  [第一章 (<a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-1.pdf" target="_blank">Part I</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-2.pdf" target="_blank">II</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-3.pdf" target="_blank">III</a>)]</a></font></strong></li>
+    <li><strong><font color="#874e26"><a href="#">《知识图谱: 概念与技术》</a><a href="https://mp.weixin.qq.com/s/eiHhq8B0cc5XDirD9pszyA" target="_blank">  [第一章 (<a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-1.pdf" target="_blank">Part I</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-2.pdf" target="_blank">II</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-3.pdf" target="_blank">III</a>)]</a></font></strong></li>
 
 
-    <li><strong><font color="#874e26"><a href="../Book/semantic_web.pdf">语义网基础教程</a></font></strong></li>
+    <li><strong><font color="#874e26"><a href="../Book/semantic_web.pdf">《语义网基础教程》</a></font></strong></li>
 
 
     <li><strong><font color="#874e26"><a href="https://web.stanford.edu/~jurafsky/slp3/">Speech and Language Processing (3rd ed. draft) [<a href="http://web.stanford.edu/~jurafsky/slp3/ed3book_dec292021.pdf" target="_blank">Book</a>] [<a href="https://mp.weixin.qq.com/s/xz0fKzXi6OzzFYg9GszBzw" target="_blank">Report</a>]</a></a></font></strong></li>
 
 
-    <li><strong><font color="#874e26"><a href="http://product.dangdang.com/29289680.html">神经网络与深度学习 (Charu C. Aggarwal博士 著)  [<a href="https://mp.weixin.qq.com/s/ZYubz3-N24dDSCNV3Nkhgg" target="_blank">Report</a>]</a></a></font></strong></li>
+    <li><strong><font color="#874e26"><a href="http://product.dangdang.com/29289680.html">《神经网络与深度学习》 (Charu C. Aggarwal博士 著)  [<a href="https://mp.weixin.qq.com/s/ZYubz3-N24dDSCNV3Nkhgg" target="_blank">Report</a>]</a></a></font></strong></li>
 
 
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
