--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -457,6 +457,9 @@
 <!-- information system - C-->
     <a href="https://wise2024-qatar.com/" target="_blank">WISE</a>
     |
+<!-- computer animation - C-->
+    <a href="https://casa2024.wtu.edu.cn/index.htm" target="_blank">CASA</a>
+    |
 <!-- Computational Linguistics -->
     <a href="" target="_blank">AACL</a>
     |
@@ -630,6 +633,9 @@
     <a href="https://2023.refsq.org/" target="_blank">REFSQ</a>
     |
     <a href="https://www.icwe2023.com/" target="_blank">ICWE</a>
+    |
+<!-- computer animation - C-->
+    <a href="https://cyprusconferences.org/casa2023/" target="_blank">CASA</a>
     |
 <!-- others -->
 <!-- Computational Linguistics -->
@@ -2518,7 +2524,28 @@ ChatGPT:
     <!-- 12.12 --> 
     <a href="https://mp.weixin.qq.com/s/dahc-OgUTXpYocjHSDADww" target="_blank">最新开源模型Mixtral震爆AI社区！超越LLama2和GPT-3.5，来自欧洲初创公司</a>
     | 
-
+    <!-- 12.13 --> 
+    <a href="https://mp.weixin.qq.com/s/B3yYiBKWgYO95ZMZx4JwZw" target="_blank">国货之光，复旦发布大模型训练效率工具 CoLLiE，效率显著提升</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Z77-wMbkFfcuFCGcb268vg" target="_blank">微软官宣放出一个「小模型」，仅2.7B参数，击败Llama2和Gemini Nano 2</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/b80xxGKU7Rd6NrvowMOC7g" target="_blank">全球首个AI监管法案出炉！</a>
+    |  
+    <!-- 12.14 --> 
+    <a href="https://mp.weixin.qq.com/s/USWa79_zyUrUP-HQXBBvww" target="_blank">GPT-4.5疑似曝光！三种型号模型，多模态能力大升级，定价遭泄漏</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/BuQpaUAm5IsoX2SNlCr23g" target="_blank">杠上了！谷歌官宣开放Gemini API，奥特曼宣布ChatGPT Plus恢复订阅！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HItVf1mu7eWEdvISFfYiOg" target="_blank">OpenAI领导层薪酬大曝光！奥特曼的年薪还没国内一个应届生高？</a>
+    |
+    <!-- 12.15 --> 
+    <a href="https://mp.weixin.qq.com/s/zfhkJcCz0F-rdMRW44CoRw" target="_blank">OpenAI超级对齐团队发布第一篇论文，Ilya带头研究，用GPT-2监督GPT-4</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/KqCoyEL9rxDpAQ-sc6VYiA" target="_blank">DeepMind论文登上Nature：大模型找到数学难题最新解，赢过人类数学家</a>
+    | 
+    <!-- 12.16 --> 
+    <a href="https://mp.weixin.qq.com/s/DQ6zdPrJavisZMtjdtGJvA" target="_blank">DeepMind提出代码链，通过“代码思考”改进推理性能</a>
+    |
 
 </br>
 </br>
