--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2546,7 +2546,44 @@ ChatGPT:
     <!-- 12.16 --> 
     <a href="https://mp.weixin.qq.com/s/DQ6zdPrJavisZMtjdtGJvA" target="_blank">DeepMind提出代码链，通过“代码思考”改进推理性能</a>
     |
-
+    <!-- 12.17 --> 
+    <a href="https://mp.weixin.qq.com/s/k4d45Qc1eANBcdNa9CokaQ" target="_blank">20倍压缩比！微软提出大模型提示压缩框架LLMLingua</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/k4d45Qc1eANBcdNa9CokaQ" target="_blank">清华提出ViLa，揭秘 GPT-4V 在机器人视觉规划中的潜力</a>
+    |
+    <!-- 12.18 --> 
+    <a href="https://mp.weixin.qq.com/s/AFooqkOIpLaMJY8v23Ze8w" target="_blank">北京大学发布LLMs（预训练+微调）数据管理全流程综述</a>
+    |
+    <!-- 12.19 --> 
+    <a href="https://mp.weixin.qq.com/s/wnFoRl9AjxE2TCQEI_bE3w" target="_blank">OpenAI发布AGI安全风险框架！董事会可随时叫停GPT-5等模型发布，奥特曼也得乖乖听话</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/irxXWrr4hg8Tac95ladOZA" target="_blank">欧洲版OpenAI疑似将在24年发布并开源GPT-4级别模型！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/fp3lPHocNhFPIJEFsGkK2g" target="_blank">幻觉不是缺陷反而是优势！OpenAI大神认为大模型是“造梦机”</a>
+    |
+    <!-- 12.20 --> 
+    <a href="https://mp.weixin.qq.com/s/mq8cx88SvqRB0bZF7ojjOA" target="_blank">超有梗！笑话都讲不好的大模型，已经进化成梗王了！解读经典梗图停不下来</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mq8cx88SvqRB0bZF7ojjOA" target="_blank">谷歌重磅发布零样本视频生成模型！效果惊艳，赶超扩散模型？</a>
+    |
+    <!-- 12.21 --> 
+    <a href="https://mp.weixin.qq.com/s/TtxLL6Cab6p3xOrOptk0WA" target="_blank">盘一盘AI大佬曾被拒稿的“最佳论文”！谷歌AI掌门人Jeff Dean、OpenAI首席科学家榜上有名</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/J3z9h18GalZWAj3ou366EA" target="_blank">CMU评测：Gemini Pro相比GPT3.5，全线溃败！代码公开可复现</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/50VHJdOQFo8l9wG039PDgw" target="_blank">人大高瓴提出“注意力波”方法，70 亿参数 Llama 比肩 GPT-4</a>
+    |    
+    <!-- 12.22 --> 
+    <a href="https://mp.weixin.qq.com/s/8Hh38ZOYWpB2fDptON__QA" target="_blank">显卡之争！英伟达和AMD下场互掐！GPU霸主地位是否能保？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RosMVGXNJeTQ8Abqb9zluA" target="_blank">ChatGPT插件将被废弃！奥特曼年终总结暗示明年大动作...</a>
+    |
+    <!-- 12.23 --> 
+    <a href="https://mp.weixin.qq.com/s/k7tzvAXlCPQLHy1l8Wtx1Q" target="_blank">ChatGPT的准确率直线提升23.7%！香港理工大学提出大模型黑箱知识注入</a>
+    |
+    <!-- 12.25 --> 
+    <a href="https://mp.weixin.qq.com/s/YfPx96Kdru9TFAJvZ96S6Q" target="_blank">OpenAI亲授ChatGPT “屠龙术”！官方Prompt 工程指南来啦</a>
+    |
 </br>
 </br>
 AI论文: 
@@ -4389,7 +4426,7 @@ Brain Computer Interfaces (BCI) Field：
     |       
   <br />
   <br />
-Data mining Field：
+Data Mining Field：
 <br />
 <!-- The Hong Kong Polytechnic University -->
     <a href="https://www4.comp.polyu.edu.hk/~jiemshi/" target="_blank">Jieming Shi</a>
@@ -4595,6 +4632,8 @@ Software Engineering Field：
     |
     <a href="https://researchers.anu.edu.au/researchers/xing-z" target="_blank">Zhenchang Xing</a>
     |
+    <a href="https://xiaoningdu.github.io/" target="_blank">Xiaoning Du</a>
+    |
 <!-- Nanyang Technological University -->
     <a href="https://wu-yueming.github.io/" target="_blank">Yueming Wu</a>
     |
@@ -4625,6 +4664,9 @@ Software Engineering Field：
     <a href="https://faculty.ecnu.edu.cn/_s43/zm2_6071/main.psp" target="_blank">Min Zhang</a>
     |
     <a href="https://ligechina.github.io/" target="_blank">Ge Li</a>
+    |
+<!-- Chongqing University -->
+    <a href="https://sites.google.com/site/hongyujohn/" target="_blank">Hongyu Zhang</a>
     |
   <br />
   <br />
@@ -4678,6 +4720,10 @@ Biochemistry Field：
 <!-- Rensselaer Polytechnic Institute -->
     <a href="https://futianfan.github.io/" target="_blank">Tianfan Fu</a>
     |
+<!-- Data Science and Analytics, HKUST(GZ) -->
+    <a href="https://zhyanlin.github.io/" target="_blank">Yanlin Zhang</a>
+    |
+
   <br />
   <br />
 Food Computation Field：
