--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@ Check out Sheng's up-to-date CV for more details.
 <h3>Recent News</h3>
 <ul>
     <li style="text-align:justify">
+      [2023/12/29]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/6837W6XEIV" target="_blank">special issue (opens the new window)</a> on Entropy-Centric Intelligent Computation With Graph: In Pursuit of Advanced Computational Theories, Methods, and Applications in the Entropy Journal. Welcome your submission.</font>
+    </li>
+    <li style="text-align:justify">
       [2023/12/11]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/6947Z4BF8Z" target="_blank">special issue (opens the new window)</a> on Information-Theoretic Guided Methods for Information Network Mining and Its Applications in the Entropy Journal. Welcome your submission.</font>
     </li>
     <li style="text-align:justify">
