--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a>
   |
-  <a href="https://earlywarning.fenqubiao.com/#/" target="_blank">《国际期刊预警名单》官方网站</a>  
+  <a href="https://earlywarning.fenqubiao.com/#/" target="_blank">《国际期刊预警名单》官方网站</a> 
+  |
+  <a href="https://mp.weixin.qq.com/s/KjCJcC5Vv0lG-fhedtsJAg" target="_blank">2023年中科院期刊分区表发布 | 你以为发了CCF A类，其实是个中科院4区…</a>
+  |   
   <br />
    <a href="https://mp.weixin.qq.com/s/A7j3g87kwQSgiScMfNg83w" target="_blank">2022工信部重点实验室名单公布！</a> 
   | 
