--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2584,6 +2584,29 @@ ChatGPT:
     <!-- 12.25 --> 
     <a href="https://mp.weixin.qq.com/s/YfPx96Kdru9TFAJvZ96S6Q" target="_blank">OpenAI亲授ChatGPT “屠龙术”！官方Prompt 工程指南来啦</a>
     |
+    <!-- 12.26 --> 
+    <a href="https://mp.weixin.qq.com/s/K_0YtRC6wsBX8LY7PPYUnQ" target="_blank">如何让ChatGPT的 MBTI 人格特质从 e 变成 i？</a>
+    |
+    <!-- 12.27 --> 
+    <a href="https://mp.weixin.qq.com/s/ekWNa_loQqUed3gAdTqoOg" target="_blank">显存瓶颈被打破！大模型训练的黑科技来了，带宽不再制约大模型训练</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pLnsIGZg6gKqlvTo3Z3F4w" target="_blank">美国Top科技公司年薪大曝光，OpenAI 600万高居榜首！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/u0na3DgU7JdrfD-fSwtURg" target="_blank">大模型已经杀入自动驾驶了！</a>
+    |
+    <!-- 12.28 --> 
+    <a href="https://mp.weixin.qq.com/s/bG2nVcateC6BiWDmE--CfQ" target="_blank">从YC掌门人到OpenAI CEO，揭秘Sam Altman如何一步步称霸硅谷</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/IjMhddWfj22NRQOpwA5Zxg" target="_blank">指令原则大解锁！26条Prompt黄金法则，精准提问，显著提升ChatGPT输出质量！</a>
+    |
+    <a href="https://" target="_blank">纽约时报起诉OpenAI和微软！要求销毁ChatGPT，索赔数十亿美元</a>
+    | 
+    <!-- 12.29 --> 
+    <a href="https://mp.weixin.qq.com/s/0B3GEXmloEEZgi-0J0Lrvw" target="_blank">AAAI 2024：大模型如何掌握复杂工具？看孔子框架的教学之道</a>
+    | 
+    <!-- 2024.01.02 --> 
+    <a href="https://mp.weixin.qq.com/s/hxDIDdUH86ltZl_kVRscVg" target="_blank">肖仰华：走向千行百业的大模型</a>
+    |   
 </br>
 </br>
 AI论文: 
@@ -4308,7 +4331,11 @@ Temporal KG Representation Learning Field：
     <a href="http://jsjytx.neuq.edu.cn/info/1037/1685.htm" target="_blank">Luyi Bai</a>
     |
     <a href="https://hd.hainanu.edu.cn/cs/info/1198/2476.htm" target="_blank">Jing Yang</a>
-    |     
+    |
+<!-- Ludwig Maximilian University of Munich (LMU Munich)  -->
+    <a href="https://zifengding.github.io/" target="_blank">Zifeng Ding</a>
+    | 
+
   <br />
   <br />
 GNN Field：
